--- a/src/template.html
+++ b/src/template.html
@@ -78,7 +78,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Hai,This is Ann Mariya Xavier,a software developer from India. I graduated in Computer Science and Engineering from APJ Abdul Kalam Technological University, Kerala.I like building new stuff and work with other people.
+                Hi,I am Ann Mariya Xavier,a software developer from India. I graduated in Computer Science and Engineering from APJ Abdul Kalam Technological University, Kerala.
               </p>
               <p class="about-wrapper__info-text">
                 Aiming to achieve a challenging and successful career where i can make a significante contribution using my knowledge and skills with the objective of development and growth of the organization.
@@ -120,10 +120,10 @@
                 <h3 class="project-wrapper__text-title">Responsive Contact List</h3>
                 <div>
                   <p class="mb-4">
-                    It is a simple responsive contact list developed by using React.js, JavaScript and some API's.This responsive contact list have search button which help in easy searching the existing contacts.
+                    It is a basic contact list project developed using React.js , HTML,CSS and JavaScript.The contacts are loaded using Api calls. 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/Ann-dev-mx/RoboFriendsNew.git">
                   See Live
                 </a>
                 <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Ann-dev-mx/RoboFriendsNew.git">
@@ -150,7 +150,7 @@
                 <h3 class="project-wrapper__text-title">Face Detection Model</h3>
                 <div>
                   <p class="mb-4">
-                    It is simple application built using React.js , clarifai Api etc.It recognize the face in the image which you are giving.
+                    This is a project for face detection from a given image.This developed using npm script,React.js,javascript,clarifai API,HTML and CSS. 
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
@@ -180,10 +180,10 @@
                 <h3 class="project-wrapper__text-title">Automatic Background Generator</h3>
                 <div>
                   <p class="mb-4">
-                    It is a simple project used to generate background as your request automatically.It is built by using JavaScript. 
+                   This is a project to generate background color based on user selection.It is built by using JavaScript,HTML and CSS 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/Ann-dev-mx/background-generator.git">
                   See Live
                 </a>
                 <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Ann-dev-mx/background-generator.git">
@@ -230,7 +230,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Bachelor of Technology graduate from APJ Abdul Kalam Technological University in 2019, in computer science and engineering.During my graduation i done a project called women security application software,it is used to send alert messages to the registerd contacts if the client facing a unsecured situation.
+                 Graduated from APJ Abdul Kalam Technological University in 2019, in computer science and engineering.Developed a Android based women security appliction as a final year project in graduation.This impliments a security system to send messages to saved contacts in case of emergency.
               </p>
               
               
