--- a/src/template.html
+++ b/src/template.html
@@ -48,7 +48,7 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Ann</span>
           <br />
-          I'm a Developer.
+          I'm a Software Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -84,7 +84,7 @@
                 Aiming to achieve a challenging and successful career where i can make a significante contribution using my knowledge and skills with the objective of development and growth of the organization.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1MdL186C61IY_dgOJnGumkwgywK6bpOdp/view?usp=drivesdk">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1N6XKr6CxA73Yok2JHDId2jYEYQ5DnQQi/view?usp=drivesdk">
                   View Resume
                 </a>
               </span>
@@ -263,7 +263,7 @@
 
           </p>
           <p class="contact-wrapper__text">
-            9446176309
+            9497116309
           </p>
           
         </div>
