make resume changes

--- a/src/template.html
+++ b/src/template.html
@@ -70,7 +70,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/profile.jpg"
+                src="./assets/profile.JPG"
                 alt="Profile Image"
               />
             </div>
@@ -78,13 +78,13 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                Hi,I am Ann Mariya Xavier,a software developer from India. I graduated in Computer Science and Engineering from APJ Abdul Kalam Technological University, Kerala.
+                Hi,I am Ann Mariya Xavier,a software developer from India. An enthusiastic and perseverant Computer Science Graduate from India.
               </p>
               <p class="about-wrapper__info-text">
-                Aiming to achieve a challenging and successful career where i can make a significante contribution using my knowledge and skills with the objective of development and growth of the organization.
+                 5 star Coder on HackerRank. Undergone professional training in Java, Python and Complete web development. Developed projects using JavaScript, HTML, CSS, DOM, Bootstrap, Node.js and other web technologies. Used database like MySQL, Oracle, PostgreSQL. Expertise in C and C++ programming. Looking forward for an opportunity in an organization which help me to contribute to its development and to improve my technical expertise.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1N6XKr6CxA73Yok2JHDId2jYEYQ5DnQQi/view?usp=drivesdk">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://drive.google.com/file/d/1qa0v5xVCUqpQG5MQbLyt6oeGB7_A8rjK/view?usp=sharing">
                   View Resume
                 </a>
               </span>
@@ -123,7 +123,7 @@
                     It is a basic contact list project developed using React.js , HTML,CSS and JavaScript.The contacts are loaded using Api calls. 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/Ann-dev-mx/RoboFriendsNew.git">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://loving-hoover-97e2dc.netlify.app">
                   See Live
                 </a>
                 <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Ann-dev-mx/RoboFriendsNew.git">
@@ -147,16 +147,16 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Face Detection Model</h3>
+                <h3 class="project-wrapper__text-title">Fake Image Identification using Image Processing</h3>
                 <div>
                   <p class="mb-4">
-                    This is a project for face detection from a given image.This developed using npm script,React.js,javascript,clarifai API,HTML and CSS. 
+                    Detect image forgeries using convolutional neural network with transfer learning technique. Mainly focusing on forgeries like image splicing and copy-move. 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/Ann-dev-mx/image-forgery-detection-CNN">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Ann-dev-mx/image-forgery-detection-CNN">
                   Source Code
                 </a>
               </div>
@@ -172,6 +172,34 @@
             </div>
           </div>
           <!-- /END Project -->
+
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Optimization Techniques in GPS-location based services</h3>
+                <div>
+                  <p class="mb-4">
+                    Done using MongoDB . Project mainly used to identify the optimised path between the delivery boy and the client and the resturants. Used shortest path algorithm.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://github.com/Ann-dev-mx/Optimization-Techniques-in-GPS-location-based-services">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Ann-dev-mx/Optimization-Techniques-in-GPS-location-based-services">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/getme.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
 
           <!-- Each .row is a project -->
           <div class="row">
@@ -230,6 +258,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
+                Pursued M TECH in Computer Science Vellore Institute of Technology in 2021.
                  Graduated from APJ Abdul Kalam Technological University in 2019, in computer science and engineering.Developed a Android based women security appliction as a final year project in graduation.This impliments a security system to send messages to saved contacts in case of emergency.
               </p>
               
